--- a/progetto/public/index.html
+++ b/progetto/public/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="it">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body {
+        margin: 0;
+      }
+
+      .container-fluid {
+        padding: 0 15px;
+      }
+
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      @media (max-width: 768px) {
+        #app {
+          padding: 20px;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>
